--- a/Style.css
+++ b/Style.css
@@ -85,19 +85,19 @@ body {
 .middle { 
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
 }
 
 .formulario {
     grid-column: 2/3;
-    grid-row: 1/3;
+    grid-row: 1/4;
 
 }
 
 .testimonio {
     grid-column: 1/2;
-    grid-row: 2/3;
-
+    grid-row: 2/4;
+    border: 1px solid black;
 
 }
 
