--- a/Style.css
+++ b/Style.css
@@ -98,6 +98,10 @@ body {
     grid-column: 1/2;
     grid-row: 2/4;
     border: 1px solid black;
+    text-align: center;
+    border-radius: 10px;
+    margin: 20px;
+
 
 }
 
@@ -151,8 +155,4 @@ body {
 .video {
     text-align: center;
     margin-bottom: 50px;
-}
-
-.testimonio {
-    text-align: center;
 }
