--- a/Style.css
+++ b/Style.css
@@ -66,7 +66,6 @@ body {
 .navbar input {
     margin-left: auto;
     margin-right: 20px;
-    order: 2;
 
 }
 
@@ -78,6 +77,7 @@ body {
     border: 1px solid black;
     border-radius: 10px;
     margin-bottom: 30px;
+    margin: 10px;
 }
 
 /* Div del medio */
@@ -155,4 +155,16 @@ body {
 .video {
     text-align: center;
     margin-bottom: 50px;
+}
+
+#gotopdiv {
+    position:fixed;
+    right:0;
+    bottom:0;
+    cursor: pointer;
+}
+
+#gotopdiv img {
+    width: 15vw;
+    padding: 0;
 }
