--- a/Style.css
+++ b/Style.css
@@ -72,7 +72,8 @@ body {
 /* Div del producto */
 
 .productos {
-    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     padding-bottom: 300px;
     border: 1px solid black;
     border-radius: 10px;
@@ -95,6 +96,8 @@ body {
 }
 
 .testimonio {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
     grid-column: 1/2;
     grid-row: 2/4;
     border: 1px solid black;
