--- a/Style.css
+++ b/Style.css
@@ -1,4 +1,8 @@
+/* MOBILE FIRST */
+
+
 /* Estilos de los inputs */
+
 
 input[type=text],input[type=email], select {
     width: 100%;
@@ -94,7 +98,7 @@ body {
 #diapositiva { 
     display: flex;
     justify-content: center;
-    margin-bottom: 330px ;
+    margin-bottom: 300px ;
 
 }
     
@@ -102,6 +106,7 @@ body {
     width: 100vw;
     height: 300px;
     object-fit: cover;
+    filter: blur(3px);
 }
 
 #diapositiva > div { 
@@ -114,60 +119,88 @@ body {
 
 .middle { 
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 2fr;
 }
 
-    /* Div del producto */
+/* Div del producto */
 
-    .productos {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        border: 1px solid black;
-        border-radius: 10px;
-        grid-row: 3/4;
-        margin: 5%;
-    }
+.productos {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    border: 1px solid black;
+    border-radius: 10px;
+    grid-row: 3/4;
+    margin: 5%;
+    
+}
 
+.informacion {
+    grid-row: 1/2;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    margin: 10%;
+    padding: 0 5%;
+    padding-bottom: 3%;
+    background-color: lightgrey;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px grey;
+}
+
+.informacion h2 {
+    color:  #4CAF50;
+    font: bold 20px sans-serif;
+    text-shadow:0 0 10px white;
+    
+}
 
 
 .formulario {
     margin: 5%;
-    grid-row: 4/5;
+    grid-row: 5/6;
+    
+    color:  #4CAF50;
+    font: bold 14px sans-serif;
+    text-shadow:0 0 10px white;
 }
 
-    /* Div de los testimonios */
+/* Div de los testimonios */
 
-    .testimonio {
-        display: grid;
-        grid-template-rows: 1fr 1fr 1fr;
-        border: 1px solid black;
-        text-align: center;
-        border-radius: 10px;
-        margin: 5%;
-        grid-row: 2/3;
+.testimonio {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    border: 1px solid black;
+    text-align: center;
+    border-radius: 10px;
+    margin: 5%;
+    grid-row: 4/5;
+    color:  #4CAF50;
+    font: bold 20px sans-serif;
+    text-shadow:0 0 10px white;
 
 
-    }
+}
 
-.video {
+.conceptvideo {
     display: flex;
     flex-direction: column;
-    grid-row: 1/2;
+    grid-row: 2/3;
     text-align: center;
 }
 
-.video label {
+.conceptvideo label {
     color:  #4CAF50;
     font: bold 20px sans-serif;
     text-shadow:0 0 10px white;
 
 }
 
-.video iframe {
+.conceptvideo video {
     margin: auto;
-    width: 90vw; 
-    height: 60vh;
-
+    width: 90%; 
+    height: auto;
+    border-radius: 20px;
 }
 
 
@@ -207,12 +240,18 @@ body {
 .middle { 
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows:  1fr 1fr 1fr 1fr;
+}
+
+.informacion {
+    grid-column: 1/3;
+    grid-row: 1/2 ;
+    margin: 5% 20%;
 }
 
 .formulario {
     grid-column: 2/3;
-    grid-row: 2/5;
+    grid-row: 3/5;
 
 }
 
@@ -220,7 +259,7 @@ body {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     grid-column: 1/2;
-    grid-row: 3/4;
+    grid-row: 4/5;
     border: 1px solid black;
     text-align: center;
     border-radius: 10px;
@@ -229,13 +268,13 @@ body {
 
 }
 
-.video {
+.conceptvideo {
     grid-column: 1/2;
-    grid-row: 2/3;
+    grid-row: 3/4;
 
 }
 
-.video iframe {
+.conceptvideo video {
     margin: auto;
     width: 416px; 
     height: 234px;
@@ -243,7 +282,7 @@ body {
 }
 
 .productos {
-    grid-row: 1/2;
+    grid-row: 2/3;
     grid-column: 1/3;
 }
 
