--- a/Style.css
+++ b/Style.css
@@ -134,6 +134,18 @@ body {
     
 }
 
+#producto0 {
+    grid-column: 1/2;
+}
+
+#producto1 {
+    grid-column: 2/3;
+}
+
+#producto2 {
+    grid-column: 3/4;
+}
+
 .informacion {
     grid-row: 1/2;
     display: flex;
