--- a/Style.css
+++ b/Style.css
@@ -42,13 +42,14 @@ input[type=submit]:hover {
 
 body {
     margin: 0;
+    background-color: rgb(253, 250, 235);
 }
 
 /* Estilo de navbar */
 
 .navbar { 
     display: flex;
-    background-color: darkgreen;
+    background-color: rgb(29, 124, 72);
     width: 100%;
     height: 70px;
     align-items: center;
@@ -119,31 +120,76 @@ body {
 
 .middle { 
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 }
 
 /* Div del producto */
 
 .productos {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     border: 1px solid black;
     border-radius: 10px;
     grid-row: 3/4;
     margin: 5%;
+    background-color: white ;
     
 }
 
 #producto0 {
-    grid-column: 1/2;
+    display: flex;
+    grid-row: 1/2;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    cursor: pointer;
+    border-bottom: 1px solid black ;
 }
 
 #producto1 {
-    grid-column: 2/3;
+    display: flex;
+    grid-row: 2/3;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    cursor: pointer;
+    border-bottom: 1px solid black ;
+    
+    
 }
 
 #producto2 {
-    grid-column: 3/4;
+    display: flex;
+    grid-row: 3/4;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    cursor: pointer;
+}
+
+#fotosproductos {
+    max-width: auto;
+    max-height: auto;
+    object-fit: cover;
+    width: 150px;
+    height: 150px;
+    border-radius: 20px;
+    cursor: pointer;
+    
+}
+
+#nombreProductos {
+    order: 2;
+    color:  #4CAF50;
+    font: bold 20px sans-serif;
+    cursor: pointer;
+}
+
+#precioProductos {
+    color:  grey;
+    font: bold 20px sans-serif;
+    order: 3;
+    cursor: pointer;
 }
 
 .informacion {
@@ -155,15 +201,22 @@ body {
     margin: 10%;
     padding: 0 5%;
     padding-bottom: 3%;
-    background-color: lightgrey;
     border-radius: 20px;
     box-shadow: 5px 5px 5px grey;
     font: 15px sans-serif;
+    background-image: url(img/backgroundinfo.jpg) ;
+    background-size: cover;
+    line-height: 2.5;
+    font-size: large;
+    
+    
 }
+
+
 
 .informacion h2 {
     color:  #4CAF50;
-    font: bold 20px sans-serif;
+    font: bold 32px sans-serif;
     text-shadow:0 0 10px white;
     
 }
@@ -176,6 +229,10 @@ body {
     color:  #4CAF50;
     font: bold 14px sans-serif;
     text-shadow:0 0 10px white;
+}
+
+#labelformulario {
+    text-align: center;
 }
 
 /* Div de los testimonios */
@@ -200,6 +257,7 @@ body {
     flex-direction: column;
     grid-row: 2/3;
     text-align: center;
+    justify-content: space-evenly;
 }
 
 .conceptvideo label {
@@ -210,7 +268,7 @@ body {
 }
 
 .conceptvideo video {
-    margin: auto;
+    margin: 0 auto;
     width: 90%; 
     height: auto;
     border-radius: 20px;
@@ -221,6 +279,7 @@ body {
 
 #gotopdiv {
     display: flex;
+    flex-direction: column-reverse;
     position:fixed;
     right:0;
     bottom:0;
@@ -237,8 +296,8 @@ body {
 
 footer {
     text-align: center;
-    color: grey;
-    background-color: lightgreen;
+    color: white;
+    background-color: #2BAE66FF;
     margin: 10px 10px;
     margin-top: 100px;
     border-radius: 20px;
@@ -255,8 +314,37 @@ footer label {
 /* Vista de tablet */
 
 @media screen and (min-width: 568px) and (max-width: 768px) {
-   body{
-       background-color: blue;
+
+   .middle {
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   grid-template-rows:  1fr 1fr 1fr;
+   }
+
+   .informacion {
+       grid-row: 1/2;
+       grid-column: 1/2;
+   }
+
+   .conceptvideo {
+        grid-row: 1/2;
+        grid-column: 2/3;
+
+   }
+
+    .testimonio {
+        grid-row: 2/3;
+        grid-column: 1/2;
+   }
+
+    .productos {
+        grid-row: 2/3;
+        grid-column: 2/3;
+   }
+
+   .formulario {
+       grid-row: 3/4;
+       grid-column: 1/3;
    }
 }
 
@@ -273,6 +361,19 @@ footer label {
     grid-template-rows:  1fr 1fr 1fr 1fr;
 }
 
+#diapositiva {
+    
+    margin-bottom: 450px ;
+
+}
+
+#diapositiva img { 
+    width: 100vw;
+    height: 500px;
+    object-fit: cover;
+    filter: blur(3px);
+}
+
 .informacion {
     grid-column: 1/3;
     grid-row: 1/2 ;
@@ -280,16 +381,23 @@ footer label {
 }
 
 .formulario {
+    align-self: center;
     grid-column: 2/3;
-    grid-row: 3/5;
+    grid-row: 4/5;
 
+}
+
+.productos {
+    justify-self: center;
+    max-width: 80%;
+    width: 80%;
 }
 
 .testimonio {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
-    grid-column: 1/2;
-    grid-row: 4/5;
+    grid-column: 1/3;
+    grid-row: 3/4;
     border: 1px solid black;
     text-align: center;
     border-radius: 10px;
@@ -300,12 +408,11 @@ footer label {
 
 .conceptvideo {
     grid-column: 1/2;
-    grid-row: 3/4;
+    grid-row: 4/5;
 
 }
 
 .conceptvideo video {
-    margin: auto;
     width: 416px; 
     height: 234px;
 
@@ -315,6 +422,12 @@ footer label {
     margin: 0;
     grid-row: 2/3;
     grid-column: 1/3;
+}
+
+#gotopdiv img {
+    width: 100px;
+    padding: 0;
+    object-fit: contain;
 }
 
 }
