--- a/Style.css
+++ b/Style.css
@@ -107,7 +107,7 @@ body {
     width: 100vw;
     height: 300px;
     object-fit: cover;
-    filter: blur(3px);
+    filter: blur(5px);
 }
 
 #diapositiva > div { 
@@ -128,11 +128,12 @@ body {
 .productos {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
-    border: 1px solid black;
     border-radius: 10px;
     grid-row: 3/4;
     margin: 5%;
-    background-color: white ;
+    background-image: url(img/backgroundproducto.jpg) ;
+    background-size: cover;
+    box-shadow: 5px 5px 5px lightgreen;
     
 }
 
@@ -202,7 +203,7 @@ body {
     padding: 0 5%;
     padding-bottom: 3%;
     border-radius: 20px;
-    box-shadow: 5px 5px 5px grey;
+    box-shadow: 5px 5px 5px lightgreen;
     font: 15px sans-serif;
     background-image: url(img/backgroundinfo.jpg) ;
     background-size: cover;
@@ -368,10 +369,7 @@ footer label {
 }
 
 #diapositiva img { 
-    width: 100vw;
     height: 500px;
-    object-fit: cover;
-    filter: blur(3px);
 }
 
 .informacion {
