--- a/Style.css
+++ b/Style.css
@@ -235,16 +235,29 @@ body {
 .testimonio {
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
-    border: 1px solid black;
     text-align: center;
     border-radius: 10px;
+    align-items: center;
     margin: 5%;
     grid-row: 4/5;
     color:  #4CAF50;
     font: bold 20px sans-serif;
     text-shadow:0 0 10px white;
+    background-color: white;
 
 
+}
+
+
+.testimonio label {
+    color: grey;
+    font: bold 30px sans-serif;
+
+}
+
+.testimonio p {
+     margin: 0 5px;
+    
 }
 
 .conceptvideo {
@@ -319,6 +332,17 @@ footer label {
    .informacion {
        grid-row: 1/2;
        grid-column: 1/2;
+       margin: 10px;
+   }
+
+   #diapositiva {
+    
+    margin-bottom: 40vh ;
+
+   }
+
+   #diapositiva img { 
+    height: 35vh;
    }
 
    .conceptvideo {
@@ -329,12 +353,16 @@ footer label {
 
     .testimonio {
         grid-row: 2/3;
-        grid-column: 1/2;
+        grid-column: 2/3;
+   }
+
+   .testimonio p {
+       margin: 0 5px;
    }
 
     .productos {
         grid-row: 2/3;
-        grid-column: 2/3;
+        grid-column: 1/2;
    }
 
    .formulario {
@@ -353,17 +381,17 @@ footer label {
 .middle { 
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows:  1fr 1fr 1fr 1fr;
+    grid-template-rows:  1fr 1fr 1fr;
 }
 
 #diapositiva {
     
-    margin-bottom: 450px ;
+    margin-bottom: 40vh ;
 
 }
 
 #diapositiva img { 
-    height: 500px;
+    height: 40vh;
 }
 
 .informacion {
@@ -375,7 +403,7 @@ footer label {
 .formulario {
     align-self: center;
     grid-column: 2/3;
-    grid-row: 4/5;
+    grid-row: 3/4;
 
 }
 
@@ -383,24 +411,25 @@ footer label {
     justify-self: center;
     max-width: 80%;
     width: 80%;
+    
 }
 
 .testimonio {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-column: 1/3;
-    grid-row: 3/4;
-    border: 1px solid black;
+    grid-template-rows: 1fr;
+    grid-column: 1/2;
+    grid-row: 2/3;
     text-align: center;
     border-radius: 10px;
     margin: 20px;
-
-
 }
+
+
 
 .conceptvideo {
     grid-column: 1/2;
-    grid-row: 4/5;
+    grid-row: 3/4;
 
 }
 
@@ -413,7 +442,7 @@ footer label {
 .productos {
     margin: 0;
     grid-row: 2/3;
-    grid-column: 1/3;
+    grid-column: 2/3;
 }
 
 #gotopdiv img {
