--- a/Style.css
+++ b/Style.css
@@ -378,8 +378,8 @@ footer .footerinfo {
     text-align: center;
     color: black;
     font: 16px sans-serif;
-    margin: 0px 20%;
-    margin-top: 100px;
+    margin: 100px 100px;
+    margin-top: 200px;
     z-index: 99;
     background-color: rgba(232, 232, 232, 0.8);
     border-radius: 10px;
