--- a/Style.css
+++ b/Style.css
@@ -412,12 +412,12 @@ svg {
    .middle {
    display: grid;
    grid-template-columns: 1fr 1fr;
-   grid-template-rows:  1fr 1fr 1fr;
+   grid-template-rows:  1fr 1fr 1fr 1fr;
    }
 
    .informacion {
        grid-row: 1/2;
-       grid-column: 1/2;
+       grid-column: 1/3;
        margin: 10px;
    }
 
@@ -432,13 +432,13 @@ svg {
    }
 
    .conceptvideo {
-        grid-row: 1/2;
-        grid-column: 2/3;
+        grid-row: 2/3;
+        grid-column: 1/3;
 
    }
 
     .testimonio {
-        grid-row: 2/3;
+        grid-row: 3/4;
         grid-column: 2/3;
    }
 
@@ -447,13 +447,13 @@ svg {
    }
 
     .productos {
-        grid-row: 2/3;
+        grid-row: 3/4;
         grid-column: 1/2;
     }
 
 
    .formulario {
-       grid-row: 3/4;
+       grid-row: 4/5;
        grid-column: 1/3;
    }
 }
