--- a/Style.css
+++ b/Style.css
@@ -32,7 +32,7 @@ input[type=submit]:hover {
 
 body {
     margin: 0;
-    background-color: rgb(253, 250, 235);
+    background-color: rgb(251, 252, 232);
 }
 
 
@@ -42,7 +42,7 @@ body {
 
 .navbar { 
     display: flex;
-    background-color: rgb(68, 68, 68);
+    background-color: rgb(43, 43, 43);
     width: 100%;
     height: 70px;
     align-items: center;
@@ -127,7 +127,7 @@ body {
     margin: 5%;
     background-image: url(img/backgroundproducto.jpg) ;
     background-size: cover;
-    box-shadow: 5px 5px 5px lightgreen;
+    box-shadow: 5px 5px 5px rgb(75, 124, 75);
     
 }
 
@@ -235,7 +235,7 @@ body {
     padding: 0 5%;
     padding-bottom: 3%;
     border-radius: 20px;
-    box-shadow: 5px 5px 5px lightgreen;
+    box-shadow: 5px 5px 5px rgb(75, 124, 75);
     font: 15px sans-serif;
     background-image: url(img/backgroundinfo.jpg) ;
     background-size: cover;
@@ -282,7 +282,7 @@ body {
     font: bold 20px sans-serif;
     text-shadow:0 0 10px white;
     background-color: white;
-    box-shadow: 5px 5px 5px lightgreen;
+    box-shadow: 5px 5px 5px rgb(75, 124, 75);
     background-image: url(img/backgroundtestimonio.jpg) ;
 
 }
