--- a/Style.css
+++ b/Style.css
@@ -118,7 +118,7 @@ body {
 
 .middle { 
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 0.1fr 1fr;
 }
 
 /* Div del producto */
@@ -261,7 +261,7 @@ body {
 
 .formulario {
     margin: 5%;
-    grid-row: 5/6;
+    grid-row: 6/7;
     
     color:  #4CAF50;
     font: bold 14px sans-serif;
@@ -276,10 +276,11 @@ body {
 
 .testimonio {
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
+    flex-direction: row;
     text-align: center;
     border-radius: 10px;
     align-items: center;
+    justify-content: center;
     margin: 5%;
     grid-row: 4/5;
     color:  #4CAF50;
@@ -290,6 +291,7 @@ body {
     background-image: url(img/backgroundtestimonio.jpg) ;
 
 }
+
 
 #testimonio0 {
     background-color: rgb(255,255,255, 0.7);
@@ -334,6 +336,17 @@ body {
     margin: 0 5px;
     
 }
+
+#divCambiar {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    grid-row: 5/6;
+}
+
+
+
+/* Div de los videos */
 
 .conceptvideo {
     display: flex;
@@ -415,7 +428,7 @@ svg {
    .middle {
    display: grid;
    grid-template-columns: 1fr 1fr;
-   grid-template-rows:  1fr 1fr 1fr 1fr;
+   grid-template-rows:  1fr 1fr 1fr 0.1fr 1fr;
    }
 
    footer .footerinfo {
@@ -430,6 +443,12 @@ svg {
     border-radius: 10px;
     padding: 2px 0px;
     text-shadow:0 0 10px white;
+}
+
+#divCambiar {
+    grid-row: 4/5;
+    grid-column: 2/3;
+
 }
 
    .informacion {
@@ -474,7 +493,7 @@ svg {
 
 
    .formulario {
-       grid-row: 4/5;
+       grid-row: 5/6;
        grid-column: 1/3;
    }
 }
@@ -489,7 +508,7 @@ svg {
 .middle { 
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows:  1fr 1fr 1fr;
+    grid-template-rows:  1fr 1fr 0.1fr 1fr;
 }
 
 footer .footerinfo {
@@ -529,10 +548,16 @@ footer .footerinfo {
     margin: 5% 20%;
 }
 
+#divCambiar {
+    grid-row: 3/4;
+    grid-column: 1/2;
+
+}
+
 .formulario {
     align-self: center;
     grid-column: 2/3;
-    grid-row: 3/4;
+    grid-row: 4/5;
 
 }
 
@@ -548,8 +573,6 @@ footer .footerinfo {
 
 .testimonio {
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
     grid-column: 1/2;
     grid-row: 2/3;
     text-align: center;
@@ -558,10 +581,9 @@ footer .footerinfo {
 }
 
 
-
 .conceptvideo {
     grid-column: 1/2;
-    grid-row: 3/4;
+    grid-row: 4/5;
 
 }
 
